--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GROQ_API_KEY = "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"
-GOOGLE_API_KEY = "AIzaSyBjuxp7cXlCTD6iE49g4gT8_CDvPx9Pw9Q"
+GROQ_API_KEY = ""
+GOOGLE_API_KEY = ""
